changed scatter chart